derive/tests/trybuild_tests_src/nonzeroable_fields.rs
use bytemuck::Zeroable;

#[derive(Zeroable)]
#[repr(transparent)]
struct NonZeroableField { _bad_field: &'static str }

fn main() {}
